--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGODB_URI = mongodb+srv://Mrperfect:Karthi%40123@karthi.upie0.mongodb.net/MernIntern?retryWrites=true&w=majority&appName=Karthi
+MONGODB_URI = #Replace You URI 
 SECRET_KEY = HELLO_JS
